Add dual adapter support for Node and Static builds
Enable building chat-ui with both adapter-node (web/SSR) and adapter-static
(Capacitor/Tauri SPA) from the same codebase.

Key changes:
- Refactor hooks.server.ts to use lazy dynamic imports with building checks
- Extract hook implementations to separate files under src/lib/server/hooks/
- Add building check to config.ts init() to skip database access during static builds
- Add conditional adapter selection in svelte.config.js based on ADAPTER env var
- Add build:static npm script and adapter-static dependency

Usage:
- npm run build (node adapter, default)
- npm run build:static (static adapter for SPA)

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
+		"build:static": "ADAPTER=static vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -24,6 +25,7 @@
 		"@iconify-json/eos-icons": "^1.1.6",
 		"@iconify-json/lucide": "^1.2.77",
 		"@sveltejs/adapter-node": "^5.2.12",
+		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.21.1",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@tailwindcss/typography": "^0.5.9",
